# Data-Products

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app.py  config.py  mic.csv  populate_db.py  pyproject.toml  requirements.txt  template.env
.github/workflows/: ci.yml  pr.yml
backend/: README.md  poetry.toml  pyproject.toml  template.env
backend/api/: api.py  apps.py  models.py  schemas.py  services.py  signals.py
backend/api/migrations/: 0001_initial.py  0002_alter_indicator_value.py  0002_rename_content_news_source_and_more.py  0002_stock_image_url.py  0003_alter_news_url_alter_reddit_url_alter_tweet_url.py  0003_alter_news_url_alter_reddit_url_and_more.py  0003_alter_stock_image_url.py  0003_rename_content_news_source_and_more.py  0004_alter_indicator_value.py  0004_alter_news_url.py  0004_news_timestamp.py  0005_alter_news_url.py  0005_alter_stock_image_url.py  0005_tweet_url.py
backend/dataprod/: config.py  settings.py  urls.py
db/: connector.py  db.py  env.py
db/versions/: 0bcb358b278a_add_reddit_api_id.py  1ebd80d973b9_redditid_revision.py  30025ba4ae22_initial.py  b2e18de5e110_change_country_code_to_alpha_2_and_3.py  d62a694ade35_standardise_foreign_key_naming_.py  ef3554a4abea_initial.py  efcdf4b87a08_initial.py
docker/: exec_db.sh  run_db.sh
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: api.tsx  types.tsx
frontend/src/components/: typedCharts.tsx
utils/: reddit.py  services.py  yahoo.py
