[tool.poetry]
name = "data products"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.6.2"
pandas = "^1.5.0"
alembic = "^1.8.1"
pre-commit = "^2.20.0"
psycopg2-binary = "^2.9.3"
pydantic = "^1.10.2"
structlog = "^22.1.0"
dash-bootstrap-components = "^1.2.1"
gunicorn = "^20.1.0"
praw = "^7.6.0"
nltk = "^3.7"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
